--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 11:24:00 AM</p>
+    <p class="lastupdate">09/08/2020 11:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.5&#176;F</td>
+        <td class="data">83.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.5&#176;F</td>
+        <td class="data">83.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.5&#176;F</td>
+        <td class="data">83.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.1&#176;F</td>
+        <td class="data">52.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.612 inHg (-0.021)</td>
+        <td class="data">29.613 inHg (-0.021)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">2 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.9&#176;F</td>
+        <td class="data">81.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            82.7</span><br/>
+          <span title="11:28:54 AM">
+            83.3</span><br/>
           <span title="07:33:29 AM">
             63.0</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM" class="hival">
-            82.7</span>
+          <span title="11:28:54 AM" class="hival">
+            83.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          289
+          301
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 20 hours, 37 minutes</td>
+      <td class="data">6 days, 20 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 20 hours, 37 minutes</td>
+      <td class="data">6 days, 20 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
