--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 11:34:00 AM</p>
+    <p class="lastupdate">09/08/2020 11:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">83.6&#176;F</td>
+        <td class="data">84.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">83.6&#176;F</td>
+        <td class="data">84.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">83.6&#176;F</td>
+        <td class="data">84.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.2&#176;F</td>
+        <td class="data">52.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.608 inHg (-0.023)</td>
+        <td class="data">29.608 inHg (-0.022)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNW (338&#176;)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:31:38 AM">
-            83.6</span><br/>
+          <span title="11:38:38 AM">
+            84.1</span><br/>
           <span title="07:33:29 AM">
             63.0</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:31:38 AM" class="hival">
-            83.6</span>
+          <span title="11:38:38 AM" class="hival">
+            84.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:30:06 AM">
-            52.9</span><br/>
+          <span title="11:37:26 AM">
+            53.3</span><br/>
           <span title="06:45:27 AM">
             44.4</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          312
+          318
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 20 hours, 47 minutes</td>
+      <td class="data">6 days, 20 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 20 hours, 47 minutes</td>
+      <td class="data">6 days, 20 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
