--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 11:59:00 AM</p>
+    <p class="lastupdate">09/08/2020 12:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,8 +84,8 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">86.9<br/>
-            <span class="timestamp">11:58:38 AM</span><br/>
+          <td class="data new_row">87.7<br/>
+            <span class="timestamp">12:03:14 PM</span><br/>
             63.0<br/>
             <span class="timestamp">07:33:29 AM</span>
           </td>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">86.9<br/>
-            <span class="timestamp">11:58:38 AM</span>
+          <td class="data new_row">87.7<br/>
+            <span class="timestamp">12:03:14 PM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span>
@@ -211,28 +211,28 @@
           <td class="units"> inHg</td>
           <td class="data new_row">29.650<br/>
             <span class="timestamp">12:02:01 AM</span><br/>
-            29.600<br/>
-            <span class="timestamp">04:53:01 AM</span>
+            29.597<br/>
+            <span class="timestamp">12:01:02 PM</span>
           </td>
           <td class="data new_row">29.954<br/>
             <span class="timestamp">09:59:02 AM (Sunday)</span><br/>
-            29.600<br/>
-            <span class="timestamp">04:53:01 AM (Tuesday)</span>
+            29.597<br/>
+            <span class="timestamp">12:01:02 PM (Tuesday)</span>
           </td>
           <td class="data new_row">30.063<br/>
             <span class="timestamp">09/02/2020 09:40:02 AM</span><br/>
-            29.600<br/>
-            <span class="timestamp">09/08/2020 04:53:01 AM</span>
+            29.597<br/>
+            <span class="timestamp">09/08/2020 12:01:02 PM</span>
           </td>
           <td class="data new_row">30.065<br/>
             <span class="timestamp">07/04/2020 08:07:00 AM</span><br/>
-            29.600<br/>
-            <span class="timestamp">09/08/2020 04:53:01 AM</span>
+            29.597<br/>
+            <span class="timestamp">09/08/2020 12:01:02 PM</span>
           </td>
           <td class="data new_row">30.065<br/>
             <span class="timestamp">07/04/2020 08:07:00 AM</span><br/>
-            29.600<br/>
-            <span class="timestamp">09/08/2020 04:53:01 AM</span>
+            29.597<br/>
+            <span class="timestamp">09/08/2020 12:01:02 PM</span>
           </td>
         </tr>
         <tr>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            344
+            347
           </td>
           <td class="data new_row">
             1<br/>
