--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 12:09:00 PM</p>
+    <p class="lastupdate">09/08/2020 12:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.5&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.5&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.5&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.1&#176;F</td>
+        <td class="data">52.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">30%</td>
+        <td class="data">29%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.598 inHg (-0.035)</td>
+        <td class="data">29.592 inHg (-0.043)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSE (158&#176;)</td>
+        <td class="data">1 mph ESE (112&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.7&#176;F</td>
+        <td class="data">81.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:51:13 AM">
             55</span><br/>
-          <span title="12:00:01 AM">
-            30</span>
+          <span title="12:09:10 PM">
+            29</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:20:19 AM (Monday)">
@@ -305,32 +305,32 @@
         <td class="data new_row hilo_day">
           <span title="12:02:01 AM">
             29.650</span><br/>
-          <span title="12:01:02 PM">
-            29.597</span>
+          <span title="12:13:02 PM">
+            29.592</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="12:01:02 PM (Tuesday)">
-            29.597</span>
+          <span title="12:13:02 PM (Tuesday)">
+            29.592</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/08/2020 12:01:02 PM">
-            29.597</span>
+          <span title="09/08/2020 12:13:02 PM">
+            29.592</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/08/2020 12:01:02 PM">
-            29.597</span>
+          <span title="09/08/2020 12:13:02 PM">
+            29.592</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/08/2020 12:01:02 PM">
-            29.597</span>
+          <span title="09/08/2020 12:13:02 PM">
+            29.592</span>
         </td>
         <td class="units"> inHg</td>
       </tr>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          348
+          345
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -452,11 +452,11 @@
         </td>
         <td class="data new_row hilo_year">
           2<br/>
-          211
+          212
         </td>
         <td class="data new_row hilo_rainyear">
           2<br/>
-          211
+          212
         </td>
         <td class="units">
            mph<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 21 hours, 22 minutes</td>
+      <td class="data">6 days, 21 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 21 hours, 22 minutes</td>
+      <td class="data">6 days, 21 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
